{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 186,
  "lineage": "04abd3c5-3bd8-4554-0b42-7748ac35e5a4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "kubeadm_demo_control_plane",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-007020fd9c84e18c7",
            "arn": "arn:aws:ec2:ap-south-1:590184017959:instance/i-0eda8db31c1db4eec",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0eda8db31c1db4eec",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.large",
            "ipv6_address_count": 0,
            "key_name": "kubeadm_demo",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0bd00e94ef295fc0b",
            "private_dns": "ip-172-31-39-57.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.39.57",
            "public_dns": "ec2-43-204-131-107.ap-south-1.compute.amazonaws.com",
            "public_ip": "43.204.131.107",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06727d7231449715b",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "common-ports",
              "flannel-overlay-backend",
              "kubeadm-control-plane security group"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a7842021f69c06b3",
            "tags": {
              "Name": "Kubeadm Master",
              "Role": "Control plane node"
            },
            "tags_all": {
              "Name": "Kubeadm Master",
              "Role": "Control plane node"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-057cf65b6e484c59f",
              "sg-07312511690dd14fe",
              "sg-0ac07782dc36eabcc"
            ]
          },
          "dependencies": [
            "aws_key_pair.kubeadm_demo_key_pair",
            "aws_security_group.kubadm_demo_sg_common",
            "aws_security_group.kubeadm_demo_sg_control_plane",
            "aws_security_group.kubeadm_demo_sg_flannel",
            "tls_private_key.kubadm_demo_private_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "kubeadm_demo_worker_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-007020fd9c84e18c7",
            "arn": "arn:aws:ec2:ap-south-1:590184017959:instance/i-0ba85935bfe7ec49e",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ba85935bfe7ec49e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.large",
            "ipv6_address_count": 0,
            "key_name": "kubeadm_demo",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c3f954ccbeae9249",
            "private_dns": "ip-172-31-4-103.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.4.103",
            "public_dns": "ec2-13-234-100-57.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.234.100.57",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-092e8daafad983fe7",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "common-ports",
              "flannel-overlay-backend",
              "kubeadm-worker-node security group"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05b38440b21db9017",
            "tags": {
              "Name": "Kubeadm Worker 0",
              "Role": "Worker node"
            },
            "tags_all": {
              "Name": "Kubeadm Worker 0",
              "Role": "Worker node"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02adc438e47a6711f",
              "sg-057cf65b6e484c59f",
              "sg-0ac07782dc36eabcc"
            ]
          },
          "dependencies": [
            "aws_key_pair.kubeadm_demo_key_pair",
            "aws_security_group.kubadm_demo_sg_common",
            "aws_security_group.kubeadm_demo_sg_flannel",
            "aws_security_group.kubeadm_demo_sg_worker_nodes",
            "tls_private_key.kubadm_demo_private_key"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-007020fd9c84e18c7",
            "arn": "arn:aws:ec2:ap-south-1:590184017959:instance/i-0fb5ab937ff1b04bc",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fb5ab937ff1b04bc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.large",
            "ipv6_address_count": 0,
            "key_name": "kubeadm_demo",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05d498aa982496230",
            "private_dns": "ip-172-31-5-88.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.5.88",
            "public_dns": "ec2-65-1-9-254.ap-south-1.compute.amazonaws.com",
            "public_ip": "65.1.9.254",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0abe1a2b8cbad1d61",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "common-ports",
              "flannel-overlay-backend",
              "kubeadm-worker-node security group"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05b38440b21db9017",
            "tags": {
              "Name": "Kubeadm Worker 1",
              "Role": "Worker node"
            },
            "tags_all": {
              "Name": "Kubeadm Worker 1",
              "Role": "Worker node"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02adc438e47a6711f",
              "sg-057cf65b6e484c59f",
              "sg-0ac07782dc36eabcc"
            ]
          },
          "dependencies": [
            "aws_key_pair.kubeadm_demo_key_pair",
            "aws_security_group.kubadm_demo_sg_common",
            "aws_security_group.kubeadm_demo_sg_flannel",
            "aws_security_group.kubeadm_demo_sg_worker_nodes",
            "tls_private_key.kubadm_demo_private_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "kubeadm_demo_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:590184017959:internet-gateway/igw-0e3e622d2a10dce5d",
            "id": "igw-0e3e622d2a10dce5d",
            "owner_id": "590184017959",
            "tags": {
              "Name": "Kubeadm Demo Internet GW"
            },
            "tags_all": {
              "Name": "Kubeadm Demo Internet GW"
            },
            "vpc_id": "vpc-0328161bc9c2240b8"
          },
          "dependencies": [
            "aws_vpc.kubeadm_demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "kubeadm_demo_routetable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:590184017959:route-table/rtb-0a61a4d2f5a9e99e8",
            "id": "rtb-0a61a4d2f5a9e99e8",
            "owner_id": "590184017959",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e3e622d2a10dce5d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "kubeadm Demo IGW route table"
            },
            "tags_all": {
              "Name": "kubeadm Demo IGW route table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0328161bc9c2240b8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.kubeadm_demo_igw",
            "aws_vpc.kubeadm_demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "kubeadm_demo_route_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b704802af149d527",
            "route_table_id": "rtb-0a61a4d2f5a9e99e8",
            "subnet_id": "subnet-02c612ea61034fb79"
          },
          "dependencies": [
            "aws_internet_gateway.kubeadm_demo_igw",
            "aws_route_table.kubeadm_demo_routetable",
            "aws_subnet.kubeadm_demo_subnet",
            "aws_vpc.kubeadm_demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "kubadm_demo_sg_common",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:590184017959:security-group/sg-0ac07782dc36eabcc",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ac07782dc36eabcc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "common-ports",
            "name_prefix": "",
            "owner_id": "590184017959",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "common ports"
            },
            "tags_all": {
              "Name": "common ports"
            },
            "timeouts": null,
            "vpc_id": "vpc-02e4d44f63a9d2bd2"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "kubeadm_demo_sg_control_plane",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:590184017959:security-group/sg-07312511690dd14fe",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07312511690dd14fe",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "API Server",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Kube Contoller Manager",
                "from_port": 10257,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10257
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Kube Scheduler",
                "from_port": 10259,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10259
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Kubelet API",
                "from_port": 2379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2380
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "etcd server client API",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10250
              }
            ],
            "name": "kubeadm-control-plane security group",
            "name_prefix": "",
            "owner_id": "590184017959",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Control Plane SG"
            },
            "tags_all": {
              "Name": "Control Plane SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-02e4d44f63a9d2bd2"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "kubeadm_demo_sg_flannel",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:590184017959:security-group/sg-057cf65b6e484c59f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-057cf65b6e484c59f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "flannel overlay backend",
                "from_port": 8285,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 8285
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "flannel vxlan backend",
                "from_port": 8472,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 8472
              }
            ],
            "name": "flannel-overlay-backend",
            "name_prefix": "",
            "owner_id": "590184017959",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Flannel Overlay backend"
            },
            "tags_all": {
              "Name": "Flannel Overlay backend"
            },
            "timeouts": null,
            "vpc_id": "vpc-02e4d44f63a9d2bd2"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "kubeadm_demo_sg_worker_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:590184017959:security-group/sg-02adc438e47a6711f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02adc438e47a6711f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "NodePort services",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 32767
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "kubelet API",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10250
              }
            ],
            "name": "kubeadm-worker-node security group",
            "name_prefix": "",
            "owner_id": "590184017959",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Worker Nodes SG"
            },
            "tags_all": {
              "Name": "Worker Nodes SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-02e4d44f63a9d2bd2"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "kubeadm_demo_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:590184017959:subnet/subnet-02c612ea61034fb79",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02c612ea61034fb79",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "590184017959",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kubadm_demo_public_subnet"
            },
            "tags_all": {
              "Name": "kubadm_demo_public_subnet"
            },
            "vpc_id": "vpc-0328161bc9c2240b8"
          },
          "dependencies": [
            "aws_vpc.kubeadm_demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "kubeadm_demo_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:590184017959:vpc/vpc-0328161bc9c2240b8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0334d39b3f3e90206",
            "default_route_table_id": "rtb-0ee43b60eda9d4102",
            "default_security_group_id": "sg-072eec3455d075056",
            "dhcp_options_id": "dopt-08800c99d978870e7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0328161bc9c2240b8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ee43b60eda9d4102",
            "owner_id": "590184017959",
            "tags": {
              "Name": "kubeadm_demo_vpc",
              "kubernetes.io/cluster/kubernetes": "owned"
            },
            "tags_all": {
              "Name": "kubeadm_demo_vpc",
              "kubernetes.io/cluster/kubernetes": "owned"
            }
          }
        }
      ]
    }
  ]
}